cluster-config/service-a/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  template:
    spec:
      containers:
      - name: service-a
        image: quay-registry-quay-quay-registry.apps.cluster-xxxx.xxxx.sandbox0000.opentlc.com/user1/service-a
