cluster-config/service-a/service-a-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
