cluster-config/service-a/service-a-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: service-a
  namespace: microservice-demo
spec:
  to:
    kind: Service
    name: service-a
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
